# rbot

./: .gitignore  TOKEN.py  main.py  pyproject.toml  requirements.txt
r_bot/: __init__.py  bot.py  events.py
r_bot/civ5draft/: Draft.py  DraftImage.py  config.py  image_utils.py
r_bot/commands/: clear.py  draft.py
r_bot/game_data/: __init__.py  creating_tables.py  data_info.py  dbinit.py  dbinit_secret.py  game_managing.py
r_bot/localization/: draft.py  general.py
r_bot/management/: config.py  emojis.py  roles.py  unlock_server.py
r_bot/other_data/: emoji_dict.py
r_bot/tools/: embeds.py  utils.py
r_bot/views/: CivBanButton.py  CivBanView.py
src/civ5draft/: Draft.py  DraftImage.py  __init__.py  config.py  image_utils.py
src/civ5draft/data/: civ_dict.py  emoji_dict.py
